--- a/docs/formulation.tex
+++ b/docs/formulation.tex
@@ -3,70 +3,65 @@
 The cable equation is a nonlinear parabolic PDE that can be written in the form
 \begin{equation}
     \label{eq:cable}
-    c_m \pder{V}{t} = \frac{1}{2ar_{L}} \pder{}{x} \left( a^2 \pder{V}{x} \right) - i_m + i_e,
+    c_m \pder{V}{t} = \frac{1}{2\pi a r_{L}} \pder{}{x} \left( a^2 \pder{V}{x} \right) - i_m + i_e,
 \end{equation}
 where
 \begin{itemize}
     \item $V$ is the potential relative to the ECM $[mV]$
-    \item $a$ is the cable radius \todo{units} $[mm]$?
+    \item $a$ is the cable radius $(mm)$, and can vary with $x$
     \item $c_m$ is the {specific membrane capacitance}, approximately the same for all neurons $\approx 10~nF/mm^2$. Related to \emph{membrane capacitance} $C_m$ by the relationship $C_m=c_{m}A$, where $A$ is the surface area of the cell.
-    \item $i_m$ is the membrane current \todo{units}. The total contribution from ion and synaptic channels is expressed as a the product of current per unit area $i_m$ and the surface area.
+    \item $i_m$ is the membrane current $[A]$. The total contribution from ion and synaptic channels is expressed as a the product of current per unit area $i_m$ and the surface area.
     \item $i_e$ is the electrode current flowing into the cell, divided by surface area, i.e. $i_e=I_e/A$.
     \item $r_L$ is intracellular resistivity, typical value $1~k\Omega$
 \end{itemize}
 
 Note that the standard convention is followed, whereby membrane and synapse currents ($i_m$) are positive when outward, and electrod currents ($i_e$) are positive inward.
 
-The PDE in (\ref{eq:cable}) is derived from the following mass balance expression for a cable segment
+The PDE in (\ref{eq:cable}) is derived from the following mass balance expression for a cable segment:
+\begin{align}
+    \int_{\Omega}{c_m \pder{V}{t} } \deriv{v} =
+        & - \int_{\Gamma_{\text{left}}} \left( \frac{1}{r_L}\pder{V}{x} \right) \deriv{s}
+          + \int_{\Gamma_{\text{right}}} \left( \frac{1}{r_L}\pder{V}{x} \right) \deriv{s} \nonumber \\
+        & - \int_{\Gamma_{ext}} {(i_m - i_e)} \deriv{s}
+    \label{eq:cable_balance}
+\end{align}
+where $\int_\Omega \cdot \deriv{v}$ is shorthand for the volume  integral over the segment $\Omega$, and $\int_\Gamma \cdot \deriv{s}$ is shorthand for the surface integral over the surface $\Gamma$.
+The surface of the cable segment is sub-divided into the left, right and external parts of the surface.
+
+The external surface $\Gamma_{ext}$ is the cell membrane, at the interface between the extra-cellular and intra-cellular regions.
+The current, which is the conserved quantity in our conservation law, over the surface is composed of the synapse and ion channel contributions.
+This is derived from a thin film approximation to the cell membrane, whereby the membrane is treated as an infinitesimally thin interface between the intra and extra cellular regions.
+
+The left and right surface are the interface between the cable segment and its neighbour.
+
+\subsection{Assumptions of the cable equation}
+See \cite{lindsay_2004} for a detailed derivation of the cable equation, and extensions to the one-dimensional model that account for radial variation of potential.
+
+The formulation in equations~\eq{eq:cable} and~\eq{eq:cable_balance} is based on the following expression in three dimensions (based on Maxwell's equations adapted for neurological modelling)
 \begin{equation}
-    \label{eq:cable}
-    2\pi a \Delta x c_m \pder{V}{t} = -\left. \left( \frac{\pi a^2}{r_L}\pder{V}{x} \right) \right|_\text{left}
-                                      +\left. \left( \frac{\pi a^2}{r_L}\pder{V}{x} \right) \right|_\text{right}
-                                      - 2\pi a \Delta x (i_m - i_e)
+    \nabla \cdot \vv{J} = 0,
 \end{equation}
+where $\vv{J}$ is current density (units $A/m^2$).
+Current density is in turn defined in terms of electric field $\vv{E}$ (units $V/m$)
+\begin{equation}
+    \vv{J} = \sigma \vv{E},
+\end{equation}
+where $\sigma$ is the specific electrical conductivity of intra-cellular fluid (typically 3.3 $S/m$).
 
-\begin{table*}[htp!]
-    \begin{center}
+The derivation of the cable equation is based on two assumptions:
+\begin{enumerate}
+    \item that charge disperion is effectively instantaneous for the purposes of dendritic modelling.
+    \item that diffusion of magnetic field is instant, i.e. it behaves quasi-statically in the sense that it is determined by the electric field through the Maxwell equations.
+\end{enumerate}
+Under these conditions, $\vv{E}$ is conservative, and as such can be expressed in terms of a potential field
+\begin{equation}
+    \vv{E} = \nabla \phi,
+\end{equation}
+where the extra/intra-cellular potential field $\phi$ has units $mV$.
 
-    \begin{tabular}{llll}
-        \hline
-        quality & symbol & unit  & notes \\
-        \hline
-        energy     & $J$ & joule   $j$  & work to push 1 $N$ through 1 $m$ \\
-        charge     & $q$ & coulomb $C$  & $6.25\cdot10^{18}$ electrons, $[A\cdot s]$ \\
-        current    & $I$ & ampere  $A$  & $[C\cdot s^{-1}]$, $A$ is SI base unit\\
-        voltage    & $V$ & volt    $V$  & potential work per unit charge \\
-        resistance & $R$ & ohm $\Omega$ & recall Ohm's law $V=IR$ \\
-        capacitance& $C$ & farad   $F$  & $C=\frac{q}{V}$, $[J\cdot C^{2}]$\\
-        \hline
-    \end{tabular}
-
-    \begin{tabular}{llll}
-        \hline
-        symbol & unit & equivalents & SI base \\
-        \hline
-        $J$    & $j$      &  $J\cdot s^{-1}$, $V\cdot A$ &
-            $kg\cdot m^{2}\cdot s^{-2}$ \\
-
-        $q$    & $C$      & $s\cdot A$ &
-            $s\cdot A$ \\
-
-        $I$    & $A$  & $C\cdot s^{-1}$ &
-            $A$ \\
-
-        $V$    & $V$      & $W\cdot A$ &
-            $kg\cdot m^{2}\cdot s^{-3}\cdot A^{-1}$ \\
-
-        $R$    & $\Omega$ & $V\cdot A^{-1}$ &
-            $kg\cdot m^{2}\cdot s^{-3}\cdot A^{-2}$ \\
-
-        $C$    & $F$      & $C\cdot V^{-1}$  &
-            $kg^{-1}\cdot m^{-2}\cdot s^{4}\cdot A^{2}$ \\
-        \hline
-    \end{tabular}
-
-    \end{center}
-    \caption{Symbols and quantities.}
-\end{table*}
-
-
+The derivation of the one-dimensional conservation equation \eq{eq:cable_balance} is based on the assumption that the intra-cellular potential (i.e. inside the cell) does not vary radially.
+That is, potential is a function of the axial distance $x$ alone
+\begin{equation}
+    \vv{E} = \nabla \phi = \pder{V}{x}.
+\end{equation}
+This is not really true, because a potential field that is a variable of $x$ and $t$ alone can't support the axial gradients required to drive the potential difference over the cell membrane.
