--- a/docs/formulation.tex
+++ b/docs/formulation.tex
@@ -20,21 +20,32 @@ Note that the standard convention is followed, whereby membrane and synapse curr
 The PDE in (\ref{eq:cable}) is derived from the following mass balance expression for a cable segment:
 \begin{align}
     \int_{\Omega}{c_m \pder{V}{t} } \deriv{v} =
-        & - \int_{\Gamma_{\text{left}}} \left( \frac{1}{r_L}\pder{V}{x} \right) \deriv{s}
-          + \int_{\Gamma_{\text{right}}} \left( \frac{1}{r_L}\pder{V}{x} \right) \deriv{s} \nonumber \\
+        & - \sum_{n\in\mathcal{N}} {\int_{\Gamma_{n}}  \left( \frac{1}{r_L}\pder{V}{x} \cdot \vv{n} \right) \deriv{s} } \nonumber \\
         & - \int_{\Gamma_{ext}} {(i_m - i_e)} \deriv{s}
     \label{eq:cable_balance}
 \end{align}
 where $\int_\Omega \cdot \deriv{v}$ is shorthand for the volume  integral over the segment $\Omega$, and $\int_\Gamma \cdot \deriv{s}$ is shorthand for the surface integral over the surface $\Gamma$.
-The surface of the cable segment is sub-divided into the left, right and external parts of the surface.
 
-The external surface $\Gamma_{ext}$ is the cell membrane, at the interface between the extra-cellular and intra-cellular regions.
+The surface of the cable segment is sub-divided into the internal and external surfaces.
+The external surface $\Gamma_{ext}$ is the cell membrane at the interface between the extra-cellular and intra-cellular regions.
 The current, which is the conserved quantity in our conservation law, over the surface is composed of the synapse and ion channel contributions.
 This is derived from a thin film approximation to the cell membrane, whereby the membrane is treated as an infinitesimally thin interface between the intra and extra cellular regions.
 
-The left and right surface are the interface between the cable segment and its neighbour.
+The internal surfaces are the interface between the cable segment and its neighbour segments which are denoted by the set $\mathcal N$.
+Equation~\eq{eq:cable_balance} handles the general case where a cable might lie at a branch, and can be simplified for a one dimensional segment:
+\begin{align}
+    \int_{\Omega}{c_m \pder{V}{t} } \deriv{v} =
+        & - \int_{\Gamma_{\text{left}}}  \left( \frac{1}{r_L}\pder{V}{x} \right) \deriv{s} \nonumber \\
+        & + \int_{\Gamma_{\text{right}}} \left( \frac{1}{r_L}\pder{V}{x} \right) \deriv{s} \nonumber \\
+        & - \int_{\Gamma_{ext}} {(i_m - i_e)} \deriv{s} \nonumber
+\end{align}
 
+Note that some information is lost when going from a three-dimensional description of a neuron to a system of branching one-dimensional cable segments.
+If the cell is represented by cylinders or frustrums\footnote{a frustrum is a truncated cone, where the truncation plane is parallel to the base of the cone.}, the definition of volume and surface area at branch points are not exact as far as I can see.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Assumptions of the cable equation}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 See \cite{lindsay_2004} for a detailed derivation of the cable equation, and extensions to the one-dimensional model that account for radial variation of potential.
 
 The formulation in equations~\eq{eq:cable} and~\eq{eq:cable_balance} is based on the following expression in three dimensions (based on Maxwell's equations adapted for neurological modelling)
@@ -64,4 +75,5 @@ That is, potential is a function of the axial distance $x$ alone
 \begin{equation}
     \vv{E} = \nabla \phi = \pder{V}{x}.
 \end{equation}
-This is not really true, because a potential field that is a variable of $x$ and $t$ alone can't support the axial gradients required to drive the potential difference over the cell membrane.
+This is not strictly true, because a potential field that is a variable of $x$ and $t$ alone can't support the axial gradients required to drive the potential difference over the cell membrane.
+I am still trying to get my head around the assumptions made in mapping a three-dimensional problem to a pseudo one-dimensional one.
