--- a/docs/report.tex
+++ b/docs/report.tex
@@ -66,8 +66,9 @@
 \newcommand{\eq}[1]{\textbf{(\ref{#1})}\xspace}
 \newcommand{\ssec}[1]{\textbf{\S\ref{#1}}\xspace}
 
-\newcommand{\pder}[2]{\frac{\partial{#1}}{\partial{#2}}}
 \newcommand{\deriv}[1]{~\text{d}{#1}}
+\newcommand{\pder}[2]{\frac{\partial{#1}}{\partial{#2}}}
+\newcommand{\dder}[2]{\frac{\deriv{#1}}{\deriv{#2}}}
 \newcommand{\vv}[1]{\bm{#1}\xspace}
 
 %----------------------------------------------------------------------------------------
