add details about brancing morhphology

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -94,6 +94,9 @@
 \section{Formulation}
 \input{formulation.tex}
 
+\section{Apendix}
+\input{appendix.tex}
+
 \section{Symbols and Units}
 \input{symbols.tex}
 
