refine the FVM formulation

--- a/docs/images/cable.tex
+++ b/docs/images/cable.tex
@@ -70,8 +70,8 @@
 \draw [] (Tface) -- (  -1, 1);
 \draw [] (Bface) -- (  -1, 1);
 \draw [] (1, -0.5) -- (1.5, -1);
-\node [] at (-2.5, 1.15) {$\Gamma_{{left}}$};
-\node [] at ( 2.5, 1.15) {$\Gamma_{{right}}$};
+\node [] at (-2.5, 1.15) {$\Gamma_{{i,i-1}}$};
+\node [] at ( 2.5, 1.15) {$\Gamma_{{i,i+1}}$};
 \node [] at (  -1, 1.15) {$\Gamma_{{e}}$};
 \node [] at ( 1.7, -1.2) {$\Omega$};
 
