--- a/docs/report.tex
+++ b/docs/report.tex
@@ -60,6 +60,7 @@
 %----------------------------------------------------------------------------------------
 
 \newcommand{\todo}[1]{\textbf{\textcolor{blue}{TODO: #1}}} % add a comment to the article
+\newcommand{\note}[1]{\textbf{\textcolor{red}{NOTE: #1}}} % add a note to the article
 
 \newcommand{\tbl}[1]{\textbf{Table \ref{#1}}\xspace}
 \newcommand{\fig}[1]{\textbf{Figure \ref{#1}}\xspace}
@@ -94,7 +95,7 @@
 \section{Formulation}
 \input{formulation.tex}
 
-\section{Apendix}
+\section{Appendix}
 \input{appendix.tex}
 
 \section{Symbols and Units}
