--- a/docs/symbols.tex
+++ b/docs/symbols.tex
@@ -11,6 +11,7 @@
         voltage    & $V$ & volt    $V$  & potential work per unit charge \\
         resistance & $R$ & ohm $\Omega$ & recall Ohm's law $V=IR$ \\
         capacitance& $C$ & farad   $F$  & $C=\frac{q}{V}$, $[J\cdot C^{2}]$\\
+        conductance& $g$ & siemens $S$  & \\
         \hline
     \end{tabular}
 
@@ -35,6 +36,8 @@
 
         $C$    & $F$      & $C\cdot V^{-1}$  &
             $kg^{-1}\cdot m^{-2}\cdot s^{4}\cdot A^{2}$ \\
+        $g$    & $S$      & $A\cdot V^{-1}$  &
+            $kg^{-1}\cdot m^{-2}\cdot s^3\cdot A^2$ \\
         \hline
     \end{tabular}
 
