--- a/docs/symbols.tex
+++ b/docs/symbols.tex
@@ -11,7 +11,7 @@
         voltage    & $V$ & volt    $V$  & potential work per unit charge \\
         resistance & $R$ & ohm $\Omega$ & recall Ohm's law $V=IR$ \\
         capacitance& $C$ & farad   $F$  & $C=\frac{q}{V}$, $[J\cdot C^{2}]$\\
-        conductance& $g$ & siemens $S$  & \\
+        conductance& $g$ & siemens $S$  & $g=1/R$ i.e. inverse of resistance \\
         \hline
     \end{tabular}
 
